// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App when repository is not set and services are not checked renders <Input> component 1`] = `
Object {
  "badgeStyle": "default",
  "classes": Object {
    "gridItem": "Input-gridItem-337",
  },
  "handleRepositoryChange": [Function],
  "handleServiceToggle": [Function],
  "handleStyleChange": [Function],
  "repository": "",
  "serviceSelection": Array [
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
}
`;

exports[`App when repository is not set and services are not checked renders its components 1`] = `
<main
  className=""
>
  <WithStyles(CssBaseline) />
  <WithStyles(Typography)
    headlineMapping={
      Object {
        "h4": "h1",
      }
    }
    variant="h4"
  >
    Github Badge Generator
  </WithStyles(Typography)>
  <WithStyles(Paper)
    className=""
  >
    <WithStyles(Input)
      badgeStyle="default"
      handleRepositoryChange={[Function]}
      handleServiceToggle={[Function]}
      handleStyleChange={[Function]}
      repository=""
      serviceSelection={
        Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ]
      }
    />
  </WithStyles(Paper)>
  
</main>
`;

exports[`App when repository is set and services are checked renders <Output> component 1`] = `
Object {
  "badgeStyle": "default",
  "classes": Object {
    "badge": "Output-badge-545",
    "badges": "Output-badges-544",
    "code": "Output-code-548",
    "formats": "Output-formats-546",
    "radioGroup": "Output-radioGroup-547",
    "subtitle": "Output-subtitle-543",
  },
  "repository": "REPOSITORY",
  "services": Array [
    Object {
      "imageUrl": "https://img.shields.io/github/forks/{repository}.svg",
      "name": "GitHub forks",
      "title": "Build Status",
      "url": "https://github.com/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/github/stars/{repository}.svg",
      "name": "GitHub stars",
      "title": "Build Status",
      "url": "https://github.com/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/github/license/{repository}.svg",
      "name": "GitHub license",
      "title": "License",
      "url": "https://github.com/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/travis/{repository}/{branch}.svg",
      "name": "Travis CI",
      "title": "Build Status",
      "url": "https://travis-ci.org/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/circleci/project/{repository}/{branch}.svg",
      "name": "CircleCI",
      "title": "Build Status",
      "url": "https://circleci.com/gh/{repository}",
    },
    Object {
      "imageUrl": "https://circleci.com/gh/{repository}.svg?style=svg",
      "name": "CodeShip",
      "title": "Build Status",
      "url": "https://codeship.com/projects/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/codeclimate/maintainability/{repository}.svg",
      "name": "Code Climate (maintainability)",
      "title": "Maintainability",
      "url": "https://codeclimate.com/github/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/codeclimate/maintainability-percentage/{repository}.svg",
      "name": "Code Climate (% maintainability)",
      "title": "Maintainability",
      "url": "https://codeclimate.com/github/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/codeclimate/tech-debt/{repository}.svg",
      "name": "Code Climate (tech debt)",
      "title": "Technical Debt",
      "url": "https://codeclimate.com/github/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/codeclimate/coverage/github/{repository}.svg",
      "name": "Code Climate (code coverage)",
      "title": "Test Coverage",
      "url": "https://codeclimate.com/github/{repository}",
    },
    Object {
      "imageUrl": "http://img.shields.io/coveralls/{repository}/{branch}.svg",
      "name": "Coveralls",
      "title": "Test Coverage",
      "url": "https://coveralls.io/r/{repository}?branch={branch}",
    },
    Object {
      "imageUrl": "https://img.shields.io/codecov/c/github/{repository}/{branch}.svg",
      "name": "Codecov",
      "title": "Test Coverage",
      "url": "https://codecov.io/github/{repository}?branch={branch}",
    },
    Object {
      "imageUrl": "http://img.shields.io/gemnasium/{repository}.svg",
      "name": "Gemnasium",
      "title": "Dependency Status",
      "url": "https://gemnasium.com/{repository}",
    },
    Object {
      "imageUrl": "https://www.versioneye.com/user/projects/{repository}/badge.svg",
      "name": "VersionEye",
      "title": "Dependency Status",
      "url": "https://www.versioneye.com/user/projects/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/david/{repository}.svg",
      "name": "David DM",
      "title": "Dependency Status",
      "url": "https://david-dm.org/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/david/dev/{repository}.svg",
      "name": "David DM (dev)",
      "title": "devDependency Status",
      "url": "https://david-dm.org/{repository}#info=devDependencies",
    },
    Object {
      "imageUrl": "https://img.shields.io/david/peer/{repository}.svg",
      "name": "David DM (peer)",
      "title": "peerDependency Status",
      "url": "https://david-dm.org/{repository}#info=devDependencies",
    },
    Object {
      "imageUrl": "https://img.shields.io/packagist/v/{repository}.svg",
      "name": "Packagist",
      "title": "Latest Stable Version",
      "url": "https://packagist.org/packages/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/packagist/php-v/{repository}.svg",
      "name": "Packagist PHP version",
      "title": "PHP version",
      "url": "https://packagist.org/packages/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/packagist/l/{repository}.svg",
      "name": "Packagist License",
      "title": "License",
      "url": "https://packagist.org/packages/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/npm/v/{repository}.svg",
      "name": "NPM",
      "title": "Latest Stable Version",
      "url": "https://www.npmjs.com/package/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/npm/l/{repository}.svg",
      "name": "NPM License",
      "title": "License",
      "url": "https://www.npmjs.com/package/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/npm/dt/{repository}.svg",
      "name": "NPM Total Downloads",
      "title": "NPM Downloads",
      "url": "https://www.npmjs.com/package/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/npm/dm/{repository}.svg",
      "name": "NPM Downloads per month",
      "title": "NPM Downloads",
      "url": "https://www.npmjs.com/package/{repository}",
    },
    Object {
      "imageUrl": "https://img.shields.io/bower/v/{repository}.svg",
      "name": "Bower",
      "title": "Latest Stable Version",
      "url": "http://bower.io/search/?q={repository}",
    },
    Object {
      "imageUrl": "https://doc.esdoc.org/github.com/{repository}/badge.svg",
      "name": "ESDoc",
      "title": "API Documentation",
      "url": "https://doc.esdoc.org/github.com/{repository}/",
    },
    Object {
      "imageUrl": "https://badges.greenkeeper.io/{repository}.svg",
      "name": "Greenkeeper",
      "title": "Greenkeeper",
      "url": "https://github.com/{repository}/issues?q=label%3Agreenkeeper",
    },
    Object {
      "imageUrl": "http://melpa.org/packages/{repository}-badge.svg",
      "name": "Melpa",
      "title": "MELPA",
      "url": "http://melpa.org/#/{repository}/",
    },
  ],
}
`;

exports[`App when repository is set and services are checked updates <Input> component 1`] = `
Object {
  "badgeStyle": "default",
  "classes": Object {
    "gridItem": "Input-gridItem-337",
  },
  "handleRepositoryChange": [Function],
  "handleServiceToggle": [Function],
  "handleStyleChange": [Function],
  "repository": "REPOSITORY",
  "serviceSelection": Array [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
}
`;
